3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

configure.ac: Add AM_PROG_CC_C_O macro so it properly handles the types
   directory.
MSW 2007-04-01

Document random map files (except test.c and some .h).
 plugins/common/include/plugin_common.h: fix parameter name.
 plugins/common/plugin_common.c: fix parameter name.
 random_maps/*.c
 random_maps/random_maps.h: replace #define by enum to be linkable for Doxygen.
Nicolas Weeger 2007-04-01

Fix bug #1672117: elves etc don't fire over move_allow flying tiles.
Logic for monster_use_bow() was changed to make monsters fire only
 horizontally/vertically/in diagonals, and also fire over terrain
 they can't cross but which lets an arrow go over.
 server/monster.c
 server/player.c: note about move_type
Nicolas Weeger 2007-03-31

Fix wrong type/missing value. Fix some comments.
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-03-31

Change partially map plugin API. Add cf_map_has_been_loaded() to plugins.
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_map.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-03-31

crossedit/Attr.c: Remove obsolete 'flying' attribute.
Andreas Kirschbaum 2007-03-26

Implement feature request #1560387: DM follow command.
 include/player.h sproto.h
 server/c_wiz.c commands.c
 server/server.c: also fix wrong player count with hidden DMs.
Nicolas Weeger 2007-03-25

Fix broken banish command: loop logic was weird (skipping one file?).
 server/ban.c
Nicolas Weeger 2007-03-25

New plugin: cfnewspaper.
As its name implies, it will (in the future) generate an ingame newspaper.