@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add 'MessageFlag' constant, holding the NDI_xxx values, to Python.
+ plugins/cfpython/cfpython.c
+Nicolas Weeger 2007-04-02
+
 configure.ac: Add AM_PROG_CC_C_O macro so it properly handles the types
    directory.
 MSW 2007-04-01
